--- a/ontology-web-app/src/scss/main.scss
+++ b/ontology-web-app/src/scss/main.scss
@@ -44,7 +44,15 @@ body {
   #main-app {
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex: 1;
     height: 0px;
+
+    .container {
+      max-width: 1200px;
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+    }
   }
 }
